<resources>
    <string name="app_name">PuzzleMate</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_unmatching_passwords">This confirmation does not match the password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="title_puzzle_list">Puzzles</string>
    <string name="title_puzzle_detail">Puzzle Detail</string>
    <string name="title_activity_puzzle_solve">PuzzleSolveActivity</string>
    <string name="search_hint">Search puzzles</string>
    <string name="prompt_puzzle_name">Puzzle Name</string>
    <string name="button_create_puzzle">Create Puzzle</string>
    <string name="prompt_tag">Add a tag</string>
    <string name="puzzle_image_error">Must select an image for this puzzle</string>
    <string name="prompt_puzzle_description">Add a description</string>
</resources>
